--- a/client/index.web.ejs
+++ b/client/index.web.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Reviewr</title>
+    <title>Reviewer Suggestions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
   </head>
   <body>
