--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -27,6 +27,17 @@ html, body {
   margin-left: 1em;
 }
 
+.result-list .score {
+  display: inline-block;
+  width: 1.3em;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  text-align: center;
+  padding: 0.1em;
+  font-size: 80%;
+  line-height: 1.3em;
+}
+
 a {
   cursor: pointer;
 }
