made score for author of and reviewer of list smaller again (to draw more attention to the main score)

--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -39,6 +39,11 @@ html, body {
   line-height: 1.3em;
 }
 
+.potential-reviewer-author-of .score,
+.potential-reviewer-reviewer-of .score {
+  font-size: 80%;
+}
+
 .result-list .score,
 .node-text {
   font-family: Roboto, sans-serif;
