--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -50,6 +50,17 @@ html, body {
   font-weight: bold;
 }
 
+.nodes .selected g {
+  animation: node-pulsate 1s ease-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes node-pulsate {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
 a {
   cursor: pointer;
 }
