--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -17,11 +17,6 @@ html, body {
   flex: 1;
 }
 
-.results-container, .inner-results-container {
-  display: flex;
-  flex: 1
-}
-
 .results-container > .fa-spinner {
   height: 1em;
   margin-top: 1em;
@@ -124,6 +119,8 @@ a {
   border-left: 5px solid rgba(255, 255, 255, 0);
   border-right: 5px solid rgba(255, 255, 255, 0);
   cursor: col-resize;
+  display: inline-block;
+  height: 100%;
 }
 
 .Resizer.vertical:hover {
@@ -139,6 +136,19 @@ a {
   border-color: transparent;
 }
 
+.SplitPane.vertical {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.Pane1 {
+  height: 100%;
+  -webkit-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
 .Pane2 {
   overflow-y: scroll;
+  -webkit-flex: 1 1 0%;
+  flex: 1 1 0%;
 }
