highlight manuscripts of corresponding author

--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -85,6 +85,10 @@ a {
   fill: #8cc;
 }
 
+.node-manuscript-of-corresponding-author circle {
+  fill: #488;
+}
+
 .node-search circle,
 .node-main-manuscript circle {
   fill: #88f;
