allow html to be injected

--- a/client/index.web.ejs
+++ b/client/index.web.ejs
@@ -9,3 +9,6 @@
   <body>
   </body>
 </html>
+<% if (htmlWebpackPlugin.options.inject_html) { %>
+<%= htmlWebpackPlugin.options.inject_html %>
+<% } %>
