--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -102,6 +102,22 @@ a {
 .person-score .score {
   background-color: #8f8;
   border-color: #8f8;
+  position: relative;
+}
+
+.person-score .score:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity : 0.4;
+  background-image: url('/images/person.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
 }
 
 .node-early-career-researcher circle {
