made legend closable

--- a/client/src/styles/web.css
+++ b/client/src/styles/web.css
@@ -74,6 +74,14 @@ a {
   height: 100%;
 }
 
+.legend-close-button {
+  opacity: 0.5;
+}
+
+.legend-close-button:hover {
+  opacity: 1;
+}
+
 .node-text {
   fill: #000;
 }
