--- a/client/index.web.ejs
+++ b/client/index.web.ejs
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <% if (htmlWebpackPlugin.options.inject_html_head) { %>
+      <%= htmlWebpackPlugin.options.inject_html_head %>
+    <% } %>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Reviewer Suggestions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon">
   </head>
   <body>
+    <% if (htmlWebpackPlugin.options.inject_html_body) { %>
+      <%= htmlWebpackPlugin.options.inject_html_body %>
+    <% } %>
   </body>
 </html>
-<% if (htmlWebpackPlugin.options.inject_html) { %>
-<%= htmlWebpackPlugin.options.inject_html %>
+<% if (htmlWebpackPlugin.options.inject_html_end) { %>
+  <%= htmlWebpackPlugin.options.inject_html_end %>
 <% } %>
