--- a/client/index.web.ejs
+++ b/client/index.web.ejs
@@ -5,7 +5,7 @@
       <%= htmlWebpackPlugin.options.inject_html_head %>
     <% } %>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Reviewer Suggestions</title>
+    <title>PeerScout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon">
   </head>
